--- a/public/stylesheet/layout/grid.scss
+++ b/public/stylesheet/layout/grid.scss
@@ -1,5 +1,7 @@
 @import '../utils.scss';
 
+
+// postition inital 해제 dispalt block 
 article{
   position: relative;
   width: 100%;
@@ -23,7 +25,7 @@ article{
     img{
       padding-top:20px;
       width:150px;
-    }
+    } 
   }
   section{
     left:0;
@@ -56,8 +58,9 @@ article{
     background-color: orange
   }
   .Visual_1{
-    background-color: $oc-orange-1;
+    background-color: $oc-yellow-3;
     left:100%;
+    
 
     .contentMenu{
        position: absolute;
@@ -65,7 +68,7 @@ article{
        left:10%;
       width: 80%;
       height: 70%;
-      border: 1px solid blue;
+      // border: 1px solid blue;
       .card{
         width: 100%;
         text-align: center;
@@ -94,19 +97,19 @@ article{
       }
 
       .red{
-          background-color: green;
+          background-color: $oc-orange-1;
       }
       .blue{
           background-color:blue;
       }
       .yellow{
-          background-color:yellow;
+        background-color: $oc-orange-2;
       }
       .green{
           background-color:Green;
       }
       .skyblue{
-          background-color:skyblue;
+        background-color: $oc-orange-3;
       }
       .darkblue{
           background-color:darkblue;
@@ -182,5 +185,6 @@ article{
 
 .intro {
   text-align: center;
-  padding-top: 2rem;
+  padding-top: 4rem;
+  line-height: 2rem;
 }
