--- a/public/stylesheet/layout/grid.scss
+++ b/public/stylesheet/layout/grid.scss
@@ -58,7 +58,7 @@ article{
     background-color: orange
   }
   .Visual_1{
-    background-color: $oc-yellow-3;
+    background-color: $oc-gray-0;
     left:100%;
     
 
