--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,24 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
-<script src="./scripts/script.js" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-<link rel="stylesheet" type="text/css" href="./stylesheet/index.css">
-<link rel="stylesheet" type="text/css" href="./stylesheet/header.css">
-
-<body>
-  <div class="header">
-    <div>
+  <div class="header-wrap">
+    <div class="header">
     <div class="profile">
       <% if(user && user.id) { %>
       <div class="user-name">
@@ -28,8 +9,7 @@
     </div>
     <% } else {%>
    
-  </div>
-</div>
+  
 
 <!-- Trigger/Open The Modal -->
 <button id="myBtn">Open Modal</button>
@@ -62,6 +42,5 @@
 
 </div>
 
-</body>
-
-</html>
+</div>
+</div>
