--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,46 +1,59 @@
   <div class="header-wrap">
     <div class="header">
-    <div class="profile">
-      <% if(user && user.id) { %>
-      <div class="user-name">
-        안녕하세요! <%= user.nick %> 님!
+      <div class="profile">
+        <% if(user && user.id) { %>
+        <div class="user-name">
+          안녕하세요! <%= user.nick %> 님!
+        </div>
+        <a href="/auth/logout" id="logout">로그아웃</a>
       </div>
-    <a href="/auth/logout" id="logout">로그아웃</a>              
-    </div>
-    <% } else {%>
-   
-  
+      <% } else {%>
 
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
-
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div id="modal-content" class="modal-content">
-    <!-- <span class="close">×</span> -->
-    <form id="login-form" action="/auth/login" method='post'>
-      <div class="input-group">
-        <label for="email">이메z일</label>
-        <input type="email" name="email" required autofocus>
-      </div>
-      <div class="input-group">
-        <label for="password">비밀번호</label>
-        <input type="password" name="password" value="" required>
-      </div>
-      <% if (loginError) %>
-      <div class="error-message">
-        <%= loginError %>
+      <a id="login">로그인</a>
+      <div id="login-wrap" class="modal">
+        <div id="login-content" class="modal-content">
+          <!-- <span class="close">×</span> -->
+          <form id="login-form" action="/auth/login" method='post'>
+            <div class="input-group">
+              <label for="email">이메z일</label>
+              <input type="email" name="email" required autofocus>
+            </div>
+            <div class="input-group">
+              <label for="password">비밀번호</label>
+              <input type="password" name="password" value="" required>
+            </div>
+            <% if (loginError) %>
+            <div class="error-message">
+              <%= loginError %>
+            </div>
+            <a href="">회원가입</a>
+            <button type="submit">로그인</button>
+          </form>
+          <% } %>
+        </div>
       </div>
 
-      <a href="/join">회원가입</a>
-      <button type="submit">로그인</button>
-    </form>
-    <% } %>
+      <a id="join">회원가입</a>
+      <div id="join-wrap" class="modal"></div>
+        <div id="join-content" class="modal-content">
+          <form id="join-form" action="/auth/join" method="post">
+            <div class="input-group">
+              <label for="join-email">이메일</label>
+              <input type="email" name="email" value="">
+            </div>
+            <div class="input-group">
+              <label for="join-email">닉네임</label>
+              <input type="text" name="nick" value="">
+            </div>
+            <div class="input-group">
+              <label for="join-email">비밀번호</label>
+              <input type="password" name="password" value="">
+            </div>
+            
+            <button id="join-btn" class="btn" type="submit">회원가입</button>
+          </form>
+        </div>
+      </div>
   </div>
-
-</div>
-
-</div>
-</div>
+  </div>
+  
