--- a/public/stylesheet/layout/header.scss
+++ b/public/stylesheet/layout/header.scss
@@ -2,55 +2,92 @@
   position: fixed;
   top: 0;
   width: 100%;
-  background: $oc-orange-1;
+  height: 70px;
+  z-index: 1;
 
+  // background: $oc-orange-1;
+  // box-shadow:;
   .header {
     position: absolute;
     right: 0;
     padding: 3rem;
     text-align: right;
-    margin-left: 0 auto;    
+    margin-left: 0 auto;
   }
-  
+
+  /* Modal Content */
+  .modal-content {
+    position: absolute;
+    left: 37.5%;
+    top: 0;
+    /* opacity: 0; */
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    padding: 3rem;
+    // width: 50%;
+    width: 20%;
+  }
+
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .form-header {
+    text-align: center;
+    padding-bottom: 2rem;
+  }
+
+  .input-group {
+    text-align: center;
+    padding: 1rem;
+
+    input {
+      border: 0;
+      border-bottom: 1px solid $oc-orange-1;
+      width: 100%;
+    }
+
+    &:nth-child(0) {
+      padding-top: 2rem;
+    }
+  }
+
+  .form-footer {
+    text-align: center;
+  }
 }
 
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  position: absolute;
-  left: 25%;
-  top: 0;
-  /* opacity: 0; */
-  background-color: #fefefe;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.8);
+  /* Black w/ opacity */
 }
