--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-<script src="./scripts/script.js" charset="utf-8"></script>
+
 <link rel="stylesheet" type="text/css"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
@@ -18,7 +18,9 @@
 <body>
   <div class="wrapper">
     <article>
+      <div>
         <% include header %>
+      </div>
       <section class="si-z" style="display: none;">
         <div class="contentWrap">
           <h1>오늘뭐 <span>먹지?</span><span>!</span></h2>
@@ -77,5 +79,7 @@
     </article>
   </div>
 </body>
+<script src="./scripts/script.js" charset="utf-8"></script>
+<!-- <script src="./scripts/join.js" charset="utf-8"></script> -->
 
 </html>
