--- a/views/join.ejs
+++ b/views/join.ejs
@@ -1,44 +1,179 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!doctype html>
+<html lang="kr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<title>회원가입</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" type="text/css" href="./stylesheet/join.css">
+	
+
+
 </head>
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
-<script src="./scripts/script.js" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-<link rel="stylesheet" type="text/css" href="./css/index.min.css">
 
 <body>
-  <div class="wrapper">
-    <div class="timeline">
-      <form id="join-form" action="/auth/join" method="post">
-        <div class="input-group">
-          <label for="join-email">이메일</label>
-          <input type="email" name="email" value="">
-        </div>
-        <div class="input-group">
-          <label for="join-email">닉네임</label>
-          <input type="text" name="nick" value="">
-        </div>
-        <div class="input-group">
-          <label for="join-email">비밀번호</label>
-          <input type="password" name="password" value="">
-        </div>
-        <% if (joinError) %>
-          <div class="error-message">
-            <%= joinError %>
-          </div>
-        <button id="join-btn" class="btn" type="submit">회원가입</button>
-        </form>
-    </div>
-  </div>
+	<!-- Form-->
+	<div class="wrapper">
+		<div class="form">
+			<div class="form-toggle"></div>
+			<div class="form-panel one">
+				<div class="form-header">
+					<h1>
+        <!-- <img src="/img/side-logo.png" width="30px" alt=""> -->
+        오늘 뭐먹지?!
+      </h1>
+				</div>
+				<div class="form-content">
+					<form class="" action="/login" method="post" id="loginForm" formnovalidate="formnovalidate">
+						<div class="form-group">
+							<!-- <div class=""> -->
+							<label for="username">이메일
+            </label>
+							<input type="email" id="loginEmail" name="loginEmail" required="required" class="login-input" />
+							<span class="login-icon1"><i class="material-icons">mail_outline</i></span>
+							<!-- <i class="material-icons">phone</i> -->
+							<!-- </div> -->
+						</div>
+						<div class="form-group">
+							<!-- <div class=""> -->
+							<label for="password">비밀번호</label>
+							<input type="password" id="loginPassword2" name="loginPassword2" required="required" class="login-input" />
+							<span class="login-icon"><i class="material-icons">lock_outline</i></span>
+							<!-- </div> -->
+						</div>
+						<div class="form-group">
+							<label class="form-remember">
+            <input type="checkbox"/>아이디 저장하기
+          </label>
+						</div>
+						<div class="form-group t-center pad-1">
+							<div class="pad-1 f-wid">
+							<button type="submit" id="btnLoginUser" class="f-wid login-btn">로그인</button>
+						</div>
+						<div class="pad-1 f-wid">
+
+							<button type="submit" id="kkoLogin" class="f-wid">카카오 로그인</button>
+						</div>
+							<p class="ma0">
+							<a href="#" class="form-recovery join">회원가입 &nbsp|&nbsp</a>
+							<a href="#" class="form-recovery">아이디 찾기 &nbsp|&nbsp</a>
+							<a href="#" class="form-recovery">비밀번호 찾기 </a>
+							</p>
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="form-panel two">
+				<div class="form-header">
+					<h1>가입하기</h1>
+				</div>
+				<div class="form-content">
+					<form class="form-dataSend join-form" action="/join" method="post" formnovalidate="formnovalidate">
+						<div class="form-group">
+							<!-- <div class="pad-r position-r"> -->
+							<label for="username">이름</label>
+							<input type="text" id="name" name="name" required="required" placeholder="" maxlength="15">
+							<span class="login-icon"><i class="material-icons">account_circle_outline</i></span>
+							<font name="checkName" size="2"></font>
+							<span class="check-icon ch-layout"><i class="fas fa-check"></i></span>
+							<!-- </div> -->
+							<!-- <div class="position-r"> -->
+							<!-- <label for="">아이디</label>
+                <input type="text" id="userId" name="userId" required="required" placeholder="" maxlength="15">
+                <span class="check-icon"><i class="fas fa-check"></i></span> -->
+							<!-- </div> -->
+							<!-- <font name="checkId" size="2"></font> -->
+						</div>
+						<div class="form-group">
+							<label for="password">비밀번호</label>
+							<input type="password" id="password2" name="password2" required="required" placeholder="" />
+							<span class="check-icon"><i class="fas fa-check"></i></span>
+							<span class="login-icon"><i class="material-icons">lock_outline</i></span>
+							<font name="checkPwd" size="2"></font>
+						</div>
+						<!-- <div class="form-group">
+							<label for="cpassword">비밀번호 확인하기</label>
+							<input type="password" id="cpassword" name="cpassword" required="required" placeholder="" />
+							<span class="check-icon"><i class="fas fa-check"></i></span>
+							<font name="check" size="2"></font>
+						</div> -->
+						<div class="form-group">
+							<label for="email" class="f-wid">이메일 주소</label>
+							<input type="jemail" id="jemail" name="jemail">
+							<!-- <button type="button" name="button" class="mal-auto overlapMail">중복체크</button> -->
+							<span class="check-icon"><i class="fas fa-check"></i></span>
+							<span class="login-icon"><i class="material-icons">mail_outline</i></span>
+							<font name="checkMail" size="2"></font>
+						</div>
+						<div class="form-group">
+							<label for="contact" class="f-wid">연락처</label>
+							<input type="contact" id="phone" name="phone" maxlength="11" class="s-wid">
+							<span class="check-icon rig-135"><i class="fas fa-check"></i></span>
+							<button type="button" name="button" class="mal-auto overlapPhone btn-disa" disabled>인증번호</button>
+							<span class="login-icon" style="width:40px;"><i class="material-icons">phone_iphone</i></span>
+							<font name="checkPhone" size="2"></font>
+						</div>
+						<div class="form-group">
+							<input type="contact" class="s-wid pad-none" id="chkPhone" name="chkPhone" placeholder="인증번호를 입력해주세요">
+							<!-- <button type="button" name="button" class="mal-auto" id="countdown"></button> -->
+							<button type="button" name="button" id="overlapPhone-confirm" class="overlapPhone-confirm mal-auto btn-disa" disabled>인증확인</button>
+							<!-- <span id="countdown"></span> -->
+						</div>
+						<p><input type="checkbox" name="" value="" class="chkAll">모두 동의하기</label>
+						</p>
+						<div class="form-group">
+							<!-- <button type="button" id="btnCreateUser" onclick="check()" class="id-wid">가입하기</button> -->
+							<!-- <button onclick="test()"></button> -->
+						</div>
+						<h3 class="privacy-policy-btn" style="cursor:pointer;">개인정보처리방침</h3>
+						<div class="form-group privacy-policy scroll-none" style="height:100px; overflow:auto">
+							<div class="">
+								(주)먼데이앤워크의 지식 공유 플랫폼, 묻다 서비스는 개인정보보호법에 따라 묻다 서비스를 이용하시는 분들의 개인정보 및 그에 따른 권익을 보호하기 위해 개인정보 처리 방침에 대한 안내를 드리오니 자세히 읽으신 후 동의하여 주시기 바랍니다. 본 서비스의 개인정보처리방침은 2019년 1월 17일부터 시행되며 방침이 개정될 경우 서비스 공지사항 및 개별 공지를 통하여 시행 7일 전 공지합니다.  개인정보의 처리 목적 묻다는 이용자의 개인정보를 다음과
+								같은 목적으로 사용하며 명시된 목적 이외의 용도로는 사용되자 않습니다. 1. 서비스 회원 가입 및 관리 : 묻다 서비스 신규 이용자로서의 회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원 유지·관리, 회원의 본인확인, 서비스 부정이용 방지, 만14세 미만 아동의 개인정보 처리 시 법정대리인의 동의 여부 확인, 각종 고지·통지, 고충처리, 분쟁 조정을 위한 기록 보존 등을 목적으로 개인정보를 처리합니다. 2. 사무
+								처리 : 법령 및 묻다 이용약관을 위반 및 부정 이용한 이용자, 서비스의 원활한 운영에 지장을 주는 행위를 하는 이용자에 대한 제재 및 방지 조치, 분쟁조정 및 민원처리 등 묻다 서비스 이용자의 보호 및 묻다 서비스 보호를 위한 목적으로 개인정보를 처리합니다. 3. 서비스 제공 : 맞춤 콘텐츠 및 서비스 제공, 인터넷 이용환경 개선, 신규 상품 개발, 본인 및 연령 인증, 요금 결제·정산 등의 목적으로 개인정보를 처리합니다. 4.
+								서비스 개발 및 향상: 회원의 전문·관심분야와 인구통계학적 데이터, 이용자간의 관계 형성 데이터와 트렌드 데이터 자료는 신규 서비스 요소의 발굴 및 기존 서비스 개선, 향상의 목적으로 개인정보를 처리합니다. 5. 마케팅, 프로모션 및 광고 : 이벤트 및 광고성 정보 제공 및 참여 기회 제공, 서비스 이용에 대한 통계 자료 수집, 서비스의 유효성 확인 등의 목적으로 개인정보를 처리합니다.  개인정보의 처리, 항목 및 보유기간 묻다는
+								서비스 이용을 위해 필요한 최소한의 개인정보를 수집하며 이용자(정보주체)로부터 개인정보를 수집 시 동의 받은 개인정보 보유 및 이용기간 내에서 개인정보를 처리·보유합니다. 1. 이용자는 회원가입을 하지 않아도 검색엔진 및 웹 링크를 통해 질문과 답변을 포함한 글을 볼 수 있으나 질문하기, 답변하기, 글쓰기 및 네트워킹과 같은 회원제 서비스를 이용하기 위해서는 회원가입이 필요합니다. 회원가입 시점에 묻다는 이용자로부터 아래와 같은 개인정보를
+								수집합니다. - 필수 항목 : 이름, 비밀번호, 이메일, 인증 및 비밀번호 재발급을 위한 휴대폰번호, 전문분야, 관심분야 - 선택 항목 : 직무, 직장, 학교, 전공 - 묻다 내 개별 서비스 이용, 이벤트 응모 및 경품 신청 과정에서 해당 이용자에 한해 추가 개인정보 수집이 발생할 수 있으며 해당 개인정보 수집 시점에서 이용자에게 ‘수집하는 개인정보 항목, 개인정보의 수집 및 이용목적, 개인정보의 보관기간’에 대해 안내 드리고 동의를
+								받습니다 2. 개인정보 처리 및 보유 기간은 다음과 같습니다. - 수집된 개인정보는 동의일로부터 탈퇴 시까지 위 이용목적을 위하여 보유 됩니다. - 묻다는 이용자의 개인정보를 회원 탈퇴 시 즉시 파기하나 이용자에게 개인정보 보관 기간에 대해 별도의 동의를 얻은 경우와 법령에서 일정 기간 정보 보관 의무를 부과하는 경우에는 해당 기간 동안 개인정보를 별도의 데이터베이스로 옮겨 안전하게 보관합니다. 3. 이용자에게 개인정보 보관 기간에
+								대해 별도의 동의를 얻은 경우는 아래와 같습니다. - 불법적 사용자에 대한 관련 기관 수사 협조에 따른 이름, 이메일, 개인 식별 값 및 전화번호는 6개월간 별도 관리 및 보존됩니다. - 통신비밀보호법 로그인 기록: 3개월 - 소비자의 불만 또는 분쟁처리에 관한 기록: 3년 - 전자금융거래법 전자금융에 관한 기록: 5년  정보 주체와 법정대리인의 권리, 의무 및 그 행사방법 1. 개인정보 보호법 시행령 제41조 제1항에 따라 정보주체는
+								본인 인증(서면, 전자우편, FAX 등) 후 묻다 서비스에 개인정보 열람, 정정, 삭제, 처리 정지 요구를 행사할 수 있습니다. 2. 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 대리 위임을 받은 자를 통하여 하실 수 있으며 개인정보 보호법 시행규칙 별지 제11호 서식에 따른 위임장을 제출하여야 됩니다. 3. 개인정보 열람 및 처리 정지 요구는 개인정보보호법 제35조 제5항, 제37조 제2항에 의하여 정보주체의 권리가 제한될
+								수 있습니다. 4. 묻다는 정보주체의 권리에 따른 요구를 한 자가 본인이거나 정당한 대리인인지를 확인 후 요구사항을 처리합니다.  개인정보 보호책임자에 관한 사항 묻다는 개인정보 처리와 관련해 개인정보 보호책임자를 지정하고 있습니다. 개인정보 보호책임자 성명 : 정재욱 직위 : 대표이사 연락처 : jchung@mondaynwork.com 개인정보 담당자 성명 : 류민수 직위 : 소프트웨어 엔지니어 이메일 : takoo_world@mondaynwork.com
+								 개인정보 처리 방침의 변경 본 개인정보처리방침은 2018년 1월 17일부터 시행, 적용되며 법령 및 방침에 따른 변경 내용의 정정, 추가 및 삭제의 경우 변경사항의 시행 7일 전부터 공지할 것입니다.  개인정보의 안전성 확보 조치에 관한 사항 묻다는 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적, 관리적 조치를 하고 있습니다. 1. 개인정보 암호화 : 이용자의 개인정보(비밀번호)는 암호화하여 저장/관리되고
+								있으며, 암호화통신(SSL) 등을 통하여 네트워크상에서 개인정보를 안전하게 전송할 수 있도록 하고 있습니다. 비밀번호는 복호화가 불가능한 일방향 암호화되어 저장/관리되고 있습니다. 2. 해킹 등에 대비한 대책 : 묻다는 해킹이나 악성코드 등에 의해 이용자의 개인정보가 유출되거나 훼손되는 것을 막기 위해 외부로부터 접근이 통제된 구역에 시스템을 설치하고 있습니다. 또한 최신 백신프로그램을 이용하여 이용자들의 개인정보나 자료가 유출되거나
+								손상되지 않도록 방지하고 있으며, 암호화통신(SSL) 등을 통하여 네트워크상에서 개인정보를 안전하게 전송할 수 있도록 하고 있습니다. 그리고 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있으며, 기타 시스템적으로 보안성을 확보하기 위한 가능한 모든 기술적 장치를 갖추려고 노력하고 있습니다. 3. 개인정보 취급자의 최소화 및 교육실시 : 개인정보를 처리하는 직원을 최소화 하며, 업무용 PC에서는 일부 외부 인터넷 서비스를
+								사용할 수 없도록 차단 하여 개인정보 유출에 대한 위험을 줄이고 있습니다. 또한 개인정보를 보관하는 데이터베이스 시스템과 개인정보를 처리하는 시스템에 대한 비밀번호의 생성과 변경, 그리고 접근할 수 있는 권한에 대한 체계적인 기준을 마련하고 지속적인 감사를 실시하고 있습니다. 또한 개인정보를 처리하는 모든 임직원들을 대상으로 개인정보보호 의무와 보안에 대한 정기적인 교육과 캠페인을 실시하고 있습니다.  개인정보 자동 수집 장치의
+								설치, 운영 및 그 거부에 관한 사항 묻다는 이용자의 정보를 수시로 저장하고 찾아내는 "쿠키(cookie)"와 "세션"을 운용합니다. "쿠키"란 묻다의 웹사이트를 운영하는데 이용되는 서버가 이용자의 브라우저에 보내는 작은 텍스트 파일로서 이용자의 컴퓨터 하드디스크에 저장됩니다. 묻다는 쿠키 운용과 관련하여 이용자의 컴퓨터는 식별하지만 이용자를 개인적으로 식별하지는 않습니다. "세션"이란 웹사이트를 운영하는데 이용되는 서버가 이용자
+								로그인 시간 동안에 이용자의 정보를 서버에 저장하는 것을 의미합니다. 묻다는 다음과 같은 목적을 위해 쿠키와 세션을 사용합니다. 1. 쿠키와 세션의 사용 목적 묻다는 이용자들에게 특화된 맞춤서비스를 제공하기 위해서 이용자들의 정보를 저장하고 수시로 불러오는 "세션(session)"을 사용합니다. 이용자는 쿠키 설치에 대한 선택권을 가지고 있습니다. 따라서, 이용자는 웹브라우저에서 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가
+								저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다. 2. 쿠키 설정 거부 방법 예: 쿠키 설정을 거부하는 방법으로는 설정방법 예(인터넷 익스플로어의 경우) : 웹 브라우저 상단의 도구 > 인터넷 옵션 > 개인정보 > 설정에서 조정 가능. 단, 이용자께서 쿠키 설치를 거부하였을 경우 서비스 제공에 어려움이 있을 수 있습니다.
+							</div>
+						</div>
+						<p class="policyChk join-chk"><input type="checkbox" name="chkAll" value="" id="chkPolicyChk">동의하기</label>
+						</p>
+						<h3 class="service-btn" style="cursor:pointer;">이용약관</h3>
+						<div class="form-group team-service scroll-none" style="height:100px; overflow:auto">
+							<div class="">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+								in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</div>
+						</div>
+						<p class="join-chk serviceChk"><input type="checkbox" name="chkAll" value="" id="chkServiceChk">동의하기</label>
+						</p>
+						<div class="form-group">
+							<button type="button" id="btnCreateUser" onclick="check()" class="id-wid">가입하기</button>
+							<!-- <button onclick="test()"></button> -->
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<!-- <script src="scripts/scripts.js"></script> -->
+
+	
 </body>
 
 </html>
