--- a/public/stylesheet/base/reset.css
+++ b/public/stylesheet/base/reset.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	overflow: hidden;
 }
 ol, ul {
 	list-style: none;
@@ -44,4 +45,9 @@ table {
 }
 a{
 	text-decoration: none;
+	color: black;
+}
+
+input:focus {
+	outline: none;
 }
