--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
           <span>본 웹사이트는 크롬브라우저 및 데스크톱 환경에 최적화 되어있습니다.</span>
         </div>
       </section>
-      <div class="Visual_1 si-z" style="position: initial;">
+      <div class="Visual_1 si-z" >
         <div class="intro">
           <h2>게임을 통해 점심을 정해보세요 !</h2>
           <p>총 3가지의 게임이 있습니다.</p>
@@ -41,15 +41,27 @@
         <div class="contentMenu">
           <div class="card">
             <div class="cardContainer">
-              <div class="red">RED</div>
-              <div class="blue"><a href="#" class="top-btn btn">가위바위보</a></div>
+              <div class="red">
+                <p>가위바위보</p>
+                <img src="img/paper.png" alt="가위바위보">
+              </div>
+              <div class="blue">
+                <a href="#" class="top-btn btn">가위바위보</a>              
+                
+              </div>
             </div>
             <div class="cardContainer">
-              <div class="yellow">YELLOW</div>
+              <div class="yellow">
+                  <p>돌림판</p>
+                <img src="img/roulette.png" alt="룰렛">
+              </div>
               <div class="blue"><a href="#" class="bot-btn btn">돌려돌려돌림판</a></div>
             </div>
             <div class="cardContainer">
-              <div class="skyblue">SKYBLUE</div>
+              <div class="skyblue">
+                  <p>월드컵</p>
+                <img src="img/banquet-table.png" alt="음식월드컵">
+              </div>
               <div class="blue"><a href="#" class="next-btn btn">바로가기</a></div>
             </div>
           </div>
@@ -64,10 +76,14 @@
           <a href="#"><span class="prev-btn btn"></span></a>
         </aside>
       </div>
-      <div class="Visual_3 si-z">
+      <div class="Visual_3 si-z" style="display: block; left:0 ; top: 0;">
         <aside>
-        <a href="#"><span class="prev-top btn prev-btn"></span></a>
-        <h1>가위바위보게임</h1>
+          <h1>가위바위보게임</h1>
+          <p>컴퓨터와 가위바위보를 통해 승리하면 랜덤으로 음식을 정해줍니다.</p>
+          <p>게임에 졌다면 음식을 정해주지 않습니다. (다이어트)</p>
+              <a href="#">
+                <span class="prev-top btn prev-btn"></span>
+              </a>
       </aside>
       </div>
       <div class="Visual_4 si-z">
