--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -1,147 +1,224 @@
-@import url(base/reset.css);
+@charset "UTF-8";
+@import 'base/reset.css';
 @keyframes right-waterfall {
   0% {
     opacity: 0;
-    right: 50px; }
+    right: 50px;
+  }
   50% {
     opacity: 1;
-    right: 30px; }
+    right: 30px;
+  }
   100% {
     opacity: 0;
-    right: 0; } }
+    right: 0;
+  }
+}
 @keyframes left-waterfall {
   0% {
     opacity: 0;
-    left: 50px; }
+    left: 50px;
+  }
   50% {
     opacity: 1;
-    left: 30px; }
+    left: 30px;
+  }
   100% {
     opacity: 0;
-    left: 0; } }
+    left: 0;
+  }
+}
 article {
   position: relative;
   width: 100%;
   height: 960px;
-  overflow: hidden; }
-  article .contentWrap {
-    width: 100%;
-    position: absolute;
-    text-align: center;
-    top: 30%; }
-    article .contentWrap h1 {
-      font-size: 3.5rem;
-      color: White; }
-    article .contentWrap span {
-      font-weight: 1000;
-      font-size: 3.8rem;
-      color: saddlebrown; }
-    article .contentWrap img {
-      padding-top: 20px;
-      width: 150px; }
-  article section {
-    left: 0; }
-    article section .info {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      z-index: 2;
-      color: #fff;
-      font-weight: 300;
-      font-size: .9rem; }
-      article section .info span {
-        font-family: FontAwesome;
-        margin-right: 5px;
-        vertical-align: middle;
-        font-size: 15px; }
-        article section .info span:before {
-          content: "\f05a"; }
-  article .si-z {
-    width: 100%;
-    height: 960px;
-    position: absolute;
-    background-color: orange; }
-  article .Visual_1 {
-    background-color: #f8f9fa;
-    left: 100%; }
-    article .Visual_1 .contentMenu {
-      position: absolute;
-      top: 20%;
-      left: 10%;
-      width: 80%;
-      height: 70%; }
-      article .Visual_1 .contentMenu .card {
-        width: 100%;
-        text-align: center;
-        margin: 0 auto;
-        padding: 30px 0px; }
-      article .Visual_1 .contentMenu div.cardContainer {
-        height: 500px;
-        width: 300px;
-        display: inline-block;
-        margin: 2%; }
-      article .Visual_1 .contentMenu div.cardContainer div {
-        height: inherit;
-        width: inherit;
-        color: #FFF;
-        font-size: 24px;
-        backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
-        transition: all 1.5s;
-        -webkit-transition: all 1.5s;
-        -moz-transition: all 1.5s;
-        -o-transition: all 1.5s;
-        padding-top: 80px;
-        text-align: center; }
-      article .Visual_1 .contentMenu .red {
-        background-color: #ffe8cc; }
-      article .Visual_1 .contentMenu .blue {
-        background-color: blue; }
-      article .Visual_1 .contentMenu .yellow {
-        background-color: #ffd8a8; }
-      article .Visual_1 .contentMenu .green {
-        background-color: Green; }
-      article .Visual_1 .contentMenu .skyblue {
-        background-color: #ffc078; }
-      article .Visual_1 .contentMenu .darkblue {
-        background-color: darkblue; }
-      article .Visual_1 .contentMenu div.cardContainer div:last-child {
-        position: relative;
-        top: -580px;
-        transform: rotateY(180deg);
-        -webkit-transform: rotateY(180deg);
-        -ms-transform: rotateY(180deg);
-        -moz-transform: rotateY(180deg);
-        -o-transform: rotateY(180deg); }
-      article .Visual_1 .contentMenu div.cardContainer:hover div:first-child {
-        transform: rotateY(-180deg);
-        -webkit-transform: rotateY(-180deg);
-        -ms-transform: rotateY(-180deg);
-        -moz-transform: rotateY(-180deg);
-        -o-transform: rotateY(-180deg); }
-      article .Visual_1 .contentMenu div.cardContainer:hover div:last-child {
-        transform: rotateY(0deg);
-        -webkit-transform: rotateY(0deg);
-        -ms-transform: rotateY(0deg);
-        -moz-transform: rotateY(0deg);
-        -o-transform: rotateY(0deg); }
-  article .Visual_2 {
-    background-color: green;
-    left: 200%; }
-  article .Visual_3 {
-    background-color: blue;
-    left: 100%;
-    top: 100%; }
-  article .Visual_4 {
-    background-color: gray;
-    left: 100%;
-    bottom: 100%; }
+  overflow: hidden;
+}
+article .contentWrap {
+  width: 100%;
+  position: absolute;
+  text-align: center;
+  top: 30%;
+}
+article .contentWrap h1 {
+  font-size: 3.5rem;
+  color: White;
+}
+article .contentWrap span {
+  font-weight: 1000;
+  font-size: 3.8rem;
+  color: saddlebrown;
+}
+article .contentWrap img {
+  padding-top: 20px;
+  width: 150px;
+}
+article section {
+  left: 0;
+}
+article section .info {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  z-index: 2;
+  color: #fff;
+  font-weight: 300;
+  font-size: 0.9rem;
+}
+article section .info span {
+  font-family: FontAwesome;
+  margin-right: 5px;
+  vertical-align: middle;
+  font-size: 15px;
+}
+article section .info span:before {
+  content: "";
+}
+article .si-z {
+  width: 100%;
+  height: 960px;
+  position: absolute;
+  background-color: orange;
+}
+article .Visual_1 {
+  background-color: #f8f9fa;
+  left: 100%;
+}
+article .Visual_1 .contentMenu {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  width: 80%;
+  height: 70%;
+}
+article .Visual_1 .contentMenu .card {
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  padding: 30px 0px;
+}
+article .Visual_1 .contentMenu div.cardContainer {
+  height: 450px;
+  width: 300px;
+  display: inline-block;
+  margin: 2%;
+}
+article .Visual_1 .contentMenu div.cardContainer div {
+  height: inherit;
+  width: inherit;
+  color: #FFF;
+  font-size: 24px;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transition: all 1.5s;
+  -webkit-transition: all 1.5s;
+  -moz-transition: all 1.5s;
+  -o-transition: all 1.5s;
+  padding-top: 80px;
+  text-align: center;
+  box-shadow: 10px 10px 5px 0px #ffe8cc;
+}
+article .Visual_1 .contentMenu .red {
+  background-color: #ffe8cc;
+}
+article .Visual_1 .contentMenu .blue {
+  background-color: blue;
+}
+article .Visual_1 .contentMenu .yellow {
+  background-color: #ffd8a8;
+}
+article .Visual_1 .contentMenu .green {
+  background-color: Green;
+}
+article .Visual_1 .contentMenu .skyblue {
+  background-color: #ffc078;
+}
+article .Visual_1 .contentMenu .darkblue {
+  background-color: darkblue;
+}
+article .Visual_1 .contentMenu div.cardContainer div:last-child {
+  position: relative;
+  top: -530px;
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+}
+article .Visual_1 .contentMenu div.cardContainer:hover div:first-child {
+  transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+}
+article .Visual_1 .contentMenu div.cardContainer:hover div:last-child {
+  transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+}
+article .Visual_2 {
+  background-color: green;
+  left: 200%;
+}
+article .Visual_3 {
+  background-color: #f8f9fa;
+  left: 100%;
+  top: 100%;
+}
+article .Visual_4 {
+  background-color: gray;
+  left: 100%;
+  bottom: 100%;
+}
 
 .intro {
   text-align: center;
   padding-top: 4rem;
-  line-height: 2rem; }
+  line-height: 2rem;
+}
 
+aside {
+  text-align: center;
+}
+aside h1 {
+  margin-top: 8rem;
+  margin-bottom: 2rem;
+}
+aside p {
+  line-height: 1.5rem;
+}
+
+@keyframes right-waterfall {
+  0% {
+    opacity: 0;
+    right: 50px;
+  }
+  50% {
+    opacity: 1;
+    right: 30px;
+  }
+  100% {
+    opacity: 0;
+    right: 0;
+  }
+}
+@keyframes left-waterfall {
+  0% {
+    opacity: 0;
+    left: 50px;
+  }
+  50% {
+    opacity: 1;
+    left: 30px;
+  }
+  100% {
+    opacity: 0;
+    left: 0;
+  }
+}
 .header-wrap {
   position: fixed;
   top: 0;
@@ -149,47 +226,60 @@ article {
   height: 70px;
   z-index: 1;
   /* Modal Content */
-  /* The Close Button */ }
-  .header-wrap .header {
-    position: absolute;
-    right: 0;
-    padding: 3rem;
-    text-align: right;
-    margin-left: 0 auto; }
-  .header-wrap .modal-content {
-    position: absolute;
-    left: 37.5%;
-    top: 0;
-    /* opacity: 0; */
-    background-color: #fefefe;
-    padding: 20px;
-    border: 1px solid #888;
-    padding: 3rem;
-    width: 20%; }
-  .header-wrap .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold; }
-  .header-wrap .close:hover,
-  .header-wrap .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer; }
-  .header-wrap .form-header {
-    text-align: center;
-    padding-bottom: 2rem; }
-  .header-wrap .input-group {
-    text-align: center;
-    padding: 1rem; }
-    .header-wrap .input-group input {
-      border: 0;
-      border-bottom: 1px solid #ffe8cc;
-      width: 100%; }
-    .header-wrap .input-group:nth-child(0) {
-      padding-top: 2rem; }
-  .header-wrap .form-footer {
-    text-align: center; }
+  /* The Close Button */
+}
+.header-wrap .header {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 3rem 0rem;
+  text-align: right;
+}
+.header-wrap .header a {
+  padding: 0.5rem;
+}
+.header-wrap .modal-content {
+  position: absolute;
+  left: 37.5%;
+  top: 0;
+  /* opacity: 0; */
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  padding: 3rem;
+  width: 20%;
+}
+.header-wrap .close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.header-wrap .close:hover,
+.header-wrap .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.header-wrap .form-header {
+  text-align: center;
+  padding-bottom: 2rem;
+}
+.header-wrap .input-group {
+  text-align: center;
+  padding: 1rem;
+}
+.header-wrap .input-group input {
+  border: 0;
+  border-bottom: 1px solid #ffe8cc;
+  width: 100%;
+}
+.header-wrap .input-group:nth-child(0) {
+  padding-top: 2rem;
+}
+.header-wrap .form-footer {
+  text-align: center;
+}
 
 .modal {
   display: none;
@@ -211,7 +301,8 @@ article {
   background-color: black;
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.8);
-  /* Black w/ opacity */ }
+  /* Black w/ opacity */
+}
 
 aside .next-btn {
   position: absolute;
@@ -223,12 +314,15 @@ aside .next-btn {
   z-index: 2;
   font-size: 2.8rem;
   color: gray;
-  animation: right-waterfall 1.5s infinite ease-in-out; }
-  aside .next-btn:hover {
-    color: black;
-    transition: 1s; }
+  animation: right-waterfall 1.5s infinite ease-in-out;
+}
+aside .next-btn:hover {
+  color: black;
+  transition: 1s;
+}
 aside .next-btn:before {
-  content: "\f103"; }
+  content: "";
+}
 aside .prev-btn {
   position: absolute;
   font-family: FontAwesome;
@@ -239,12 +333,15 @@ aside .prev-btn {
   z-index: 2;
   font-size: 2.8rem;
   color: gray;
-  animation: left-waterfall 1.5s infinite ease-in-out; }
-  aside .prev-btn:hover {
-    color: green;
-    transition: 1s; }
+  animation: left-waterfall 1.5s infinite ease-in-out;
+}
+aside .prev-btn:hover {
+  color: green;
+  transition: 1s;
+}
 aside .prev-btn:before {
-  content: "\f103"; }
+  content: "";
+}
 
 .form-btn {
   border: 0;
@@ -253,12 +350,14 @@ aside .prev-btn:before {
   padding: 12px 20px;
   width: 100%;
   background: #ffc078;
-  box-shadow: 5px 5px 5px 5px #ffe8cc; }
+  box-shadow: 5px 5px 5px 5px #ffe8cc;
+}
 
 .login-btn {
   text-align: center;
   margin: 0 auto;
-  margin-top: 1rem; }
+  margin-top: 1rem;
+}
 
 .kko-btn {
   wdth: 50%;
@@ -266,27 +365,41 @@ aside .prev-btn:before {
   background: #FFDE00 !important;
   color: #3C1E1E;
   font-weight: bold;
-  margin-top: 1rem; }
+  margin-top: 1rem;
+}
+
+.cardContainer img {
+  width: 100px;
+  padding-top: 2rem;
+}
 
 @keyframes right-waterfall {
   0% {
     opacity: 0;
-    right: 50px; }
+    right: 50px;
+  }
   50% {
     opacity: 1;
-    right: 30px; }
+    right: 30px;
+  }
   100% {
     opacity: 0;
-    right: 0; } }
+    right: 0;
+  }
+}
 @keyframes left-waterfall {
   0% {
     opacity: 0;
-    left: 50px; }
+    left: 50px;
+  }
   50% {
     opacity: 1;
-    left: 30px; }
+    left: 30px;
+  }
   100% {
     opacity: 0;
-    left: 0; } }
+    left: 0;
+  }
+}
 
 /*# sourceMappingURL=index.css.map */
