--- a/public/stylesheet/layout/grid.scss
+++ b/public/stylesheet/layout/grid.scss
@@ -1,185 +1,182 @@
 @import '../utils.scss';
 
-
 // postition inital 해제 dispalt block 
-article{
+article {
   position: relative;
   width: 100%;
   height: 960px;
   overflow: hidden;
 
-  .contentWrap{
+  .contentWrap {
     width: 100%;
     position: absolute;
     text-align: center;
-    top:30%;
-    h1{
+    top: 30%;
+
+    h1 {
       font-size: 3.5rem;
-      color:White;
+      color: White;
     }
-    span{
+
+    span {
       font-weight: 1000;
       font-size: 3.8rem;
       color: saddlebrown;
     }
-    img{
-      padding-top:20px;
-      width:150px;
-    } 
+
+    img {
+      padding-top: 20px;
+      width: 150px;
+    }
   }
-  section{
-    left:0;
 
-    .info{
+  section {
+    left: 0;
+
+    .info {
       position: absolute;
-    bottom: 10px;
-    right: 10px;
-    z-index: 2;
-    color: #fff;
-    font-weight: 300;
-    font-size: .9rem;
+      bottom: 10px;
+      right: 10px;
+      z-index: 2;
+      color: #fff;
+      font-weight: 300;
+      font-size: .9rem;
 
-    span{
-      font-family: FontAwesome;
-      margin-right: 5px;
-      vertical-align: middle;
-      font-size: 15px;
-      &:before{
-            content: "\f05a";
-      }
+      span {
+        font-family: FontAwesome;
+        margin-right: 5px;
+        vertical-align: middle;
+        font-size: 15px;
+
+        &:before {
+          content: "\f05a";
+        }
       }
 
     }
   }
-  .si-z{
-    width:100%;
+
+  .si-z {
+    width: 100%;
     height: 960px;
     position: absolute;
     background-color: orange
-  }
-  .Visual_1{
-    background-color: $oc-gray-0;
-    left:100%;
-    
 
-    .contentMenu{
-       position: absolute;
-       top:20%;
-       left:10%;
+    
+  }
+
+  .Visual_1 {
+    background-color: $oc-gray-0;
+    left: 100%;
+
+
+    .contentMenu {
+      position: absolute;
+      top: 20%;
+      left: 10%;
       width: 80%;
       height: 70%;
+
       // border: 1px solid blue;
-      .card{
+      .card {
         width: 100%;
         text-align: center;
-        margin:0 auto;
+        margin: 0 auto;
         padding: 30px 0px;
       }
-      div.cardContainer{
-          height:500px;
-          width: 300px;
-          display:inline-block;
-          margin:2%;
-      }
-      div.cardContainer div{
-          height:inherit;
-          width:inherit;
-          color:#FFF;
-          font-size:24px;
-          backface-visibility:hidden;
-          -webkit-backface-visibility:hidden;
-          transition:all 1.5s;
-          -webkit-transition:all 1.5s;
-          -moz-transition:all 1.5s;
-          -o-transition:all 1.5s;
-          padding-top:80px;
-          text-align:center;
+
+      div.cardContainer {
+        height: 450px;
+        width: 300px;
+        display: inline-block;
+        margin: 2%;
       }
 
-      .red{
-          background-color: $oc-orange-1;
+      div.cardContainer div {
+        height: inherit;
+        width: inherit;
+        color: #FFF;
+        font-size: 24px;
+        backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+        transition: all 1.5s;
+        -webkit-transition: all 1.5s;
+        -moz-transition: all 1.5s;
+        -o-transition: all 1.5s;
+        padding-top: 80px;
+        text-align: center;
+        box-shadow: 10px 10px 5px 0px rgba(255, 232, 204);
       }
-      .blue{
-          background-color:blue;
+
+      .red {
+        background-color: $oc-orange-1;
       }
-      .yellow{
+
+      .blue {
+        background-color: blue;
+      }
+
+      .yellow {
         background-color: $oc-orange-2;
       }
-      .green{
-          background-color:Green;
+
+      .green {
+        background-color: Green;
       }
-      .skyblue{
+
+      .skyblue {
         background-color: $oc-orange-3;
       }
-      .darkblue{
-          background-color:darkblue;
+
+      .darkblue {
+        background-color: darkblue;
       }
-      div.cardContainer div:last-child{
-          position:relative;
-          top:-580px;
-          transform:rotateY(180deg);
-          -webkit-transform:rotateY(180deg);
-          -ms-transform:rotateY(180deg);
-          -moz-transform:rotateY(180deg);
-          -o-transform:rotateY(180deg);
+
+      div.cardContainer div:last-child {
+        position: relative;
+        top: -530px;
+        transform: rotateY(180deg);
+        -webkit-transform: rotateY(180deg);
+        -ms-transform: rotateY(180deg);
+        -moz-transform: rotateY(180deg);
+        -o-transform: rotateY(180deg);
       }
-      div.cardContainer:hover div:first-child{
-          transform:rotateY(-180deg);
-          -webkit-transform:rotateY(-180deg);
-          -ms-transform:rotateY(-180deg);
-          -moz-transform:rotateY(-180deg);
-          -o-transform:rotateY(-180deg);
+
+      div.cardContainer:hover div:first-child {
+        transform: rotateY(-180deg);
+        -webkit-transform: rotateY(-180deg);
+        -ms-transform: rotateY(-180deg);
+        -moz-transform: rotateY(-180deg);
+        -o-transform: rotateY(-180deg);
       }
-      div.cardContainer:hover div:last-child{
-          transform:rotateY(0deg);
-          -webkit-transform:rotateY(0deg);
-          -ms-transform:rotateY(0deg);
-          -moz-transform:rotateY(0deg);
-          -o-transform:rotateY(0deg);
+
+      div.cardContainer:hover div:last-child {
+        transform: rotateY(0deg);
+        -webkit-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -o-transform: rotateY(0deg);
       }
-      // nav{
-      //   width: 100%;
-      //   float: left;
-      // }
-      // .contentMenu-Card{
-      //   position: relative;
-      //   transform-style: preserve-3d;
-      //   transition: all 1s ease-in-out;
-      // &:hover{
-      //   transform: rotateY(180deg);
-      //   }
-      // }
-      // li{
-      //   float: left;
-      //   width: 20%;
-      //   margin: 4%;
-      //   height: 600px;
-      //   background: green;
-      //    transition:all 1.5s;
-      //    position: absolute;
-      //    backface-visibility: hidden;
-      // }
-      // .x2{
-      //   background: gray;
-      //   transform: rotateY(180deg);
-      // }
 
     }
 
   }
-  .Visual_2{
+
+  .Visual_2 {
     background-color: green;
-    left:200%;
+    left: 200%;
   }
-  .Visual_3{
-    background-color: blue;
-    left:100%;
-    top:100%;
+
+  .Visual_3 {
+    background-color: $oc-gray-0;
+    left: 100%;
+    top: 100%;
   }
-  .Visual_4{
+
+  .Visual_4 {
     background-color: gray;
-    left:100%;
-    bottom:100%;
+    left: 100%;
+    bottom: 100%;
   }
 }
 
@@ -187,4 +184,17 @@ article{
   text-align: center;
   padding-top: 4rem;
   line-height: 2rem;
+}
+
+aside {
+  text-align: center;
+
+  h1 {
+    margin-top: 8rem;
+    margin-bottom: 2rem;
+  }
+
+  p {
+    line-height: 1.5rem;
+  }
 }
