--- a/public/stylesheet/layout/header.scss
+++ b/public/stylesheet/layout/header.scss
@@ -1,3 +1,5 @@
+@import '../utils.scss';
+
 .header-wrap {
   position: fixed;
   top: 0;
@@ -5,14 +7,18 @@
   height: 70px;
   z-index: 1;
 
-  // background: $oc-orange-1;
-  // box-shadow:;
+  // background: $oc-gray-0;
+  // box-shadow: 10px 10px 5px 0px rgb(239, 237, 234);
+
   .header {
-    position: absolute;
-    right: 0;
-    padding: 3rem;
+    width: 100%;
+    max-width: 1200px;
+    margin:0 auto;    
+    padding: 3rem 0rem;
     text-align: right;
-    margin-left: 0 auto;
+    a {
+      padding: .5rem;
+    }
   }
 
   /* Modal Content */
