--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
       </div>
       <% } else {%>
 
-      <a id="login">로그인</a>
+      <a href="" id="login">로그인</a>
       <div id="login-wrap" class="modal">
         <div id="login-content" class="modal-content">
           <!-- <span class="close">×</span> -->
@@ -40,7 +40,7 @@
         </div>
       </div>
 
-      <a id="join">회원가입</a>
+      <a href="#" id="join">회원가입</a>
       <div id="join-wrap" class="modal" style="display: none;">
         <div id="join-content" class="modal-content">
           <form id="join-form" action="/auth/join" method="post">
