Game Container Css

--- a/public/stylesheet/layout/grid.scss
+++ b/public/stylesheet/layout/grid.scss
@@ -163,7 +163,7 @@ article {
   }
 
   .Visual_2 {
-    background-color: green;
+    background-color: $oc-gray-0;
     left: 200%;
   }
 
@@ -174,7 +174,7 @@ article {
   }
 
   .Visual_4 {
-    background-color: gray;
+    background-color: $oc-gray-0;
     left: 100%;
     bottom: 100%;
   }
