--- a/public/stylesheet/pages/CardSelectPage.scss
+++ b/public/stylesheet/pages/CardSelectPage.scss
@@ -4,3 +4,12 @@
     padding-top: 2rem;
   }
 }
+
+.GameContainer {
+  margin: 0 auto;
+  width: 50%;
+  height: 450px;
+  margin-top: 5rem;
+  background: red;
+
+}
