--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,9 +71,14 @@
         </aside>
       </div>
       <div class="Visual_2 si-z">
-        <h1>그냥메뉴주세요</h1>
         <aside>
+          <h1>월드컵</h1>
+          <p>컴퓨터와 가위바위보를 통해 승리하면 랜덤으로 음식을 정해줍니다.</p>
+          <p>게임에 졌다면 음식을 정해주지 않습니다. (다이어트)</p>
           <a href="#"><span class="prev-btn btn"></span></a>
+          <div class="GameContainer">
+            
+            </div>
         </aside>
       </div>
       <div class="Visual_3 si-z" style="display: block; left:0 ; top: 0;">
@@ -81,6 +86,9 @@
           <h1>가위바위보게임</h1>
           <p>컴퓨터와 가위바위보를 통해 승리하면 랜덤으로 음식을 정해줍니다.</p>
           <p>게임에 졌다면 음식을 정해주지 않습니다. (다이어트)</p>
+          <div class="GameContainer">
+            
+          </div>
               <a href="#">
                 <span class="prev-top btn prev-btn"></span>
               </a>
@@ -88,10 +96,16 @@
       </div>
       <div class="Visual_4 si-z">
       <aside>
+          <h1>돌림판</h1>
+          <p>컴퓨터와 가위바위보를 통해 승리하면 랜덤으로 음식을 정해줍니다.</p>
+          <p>게임에 졌다면 음식을 정해주지 않습니다. (다이어트)</p>
         <a href="#"><span class="prev-bot btn prev-btn"></span></a>
-        <h1>돌려돌려돌림판</h1>
+        <div class="GameContainer">
+            
+          </div>
       </aside>
       </div>
+      
     </article>
   </div>
 </body>
