--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -160,7 +160,7 @@ article .Visual_1 .contentMenu div.cardContainer:hover div:last-child {
   -o-transform: rotateY(0deg);
 }
 article .Visual_2 {
-  background-color: green;
+  background-color: #f8f9fa;
   left: 200%;
 }
 article .Visual_3 {
@@ -169,7 +169,7 @@ article .Visual_3 {
   top: 100%;
 }
 article .Visual_4 {
-  background-color: gray;
+  background-color: #f8f9fa;
   left: 100%;
   bottom: 100%;
 }
@@ -371,6 +371,14 @@ aside .prev-btn:before {
 .cardContainer img {
   width: 100px;
   padding-top: 2rem;
+}
+
+.GameContainer {
+  margin: 0 auto;
+  width: 50%;
+  height: 450px;
+  margin-top: 5rem;
+  background: red;
 }
 
 @keyframes right-waterfall {
