--- a/public/stylesheet/index.scss
+++ b/public/stylesheet/index.scss
@@ -7,6 +7,9 @@
 
 @import './components/button.scss';
 @import './pages/CardSelectPage.scss';
+@import './pages/PaperGame.scss';
+@import './pages/RouletteGame.scss';
+@import './pages/SoccerGame.scss';
 
 @import 'utils.scss';
 
