--- a/public/stylesheet/layout/grid.scss
+++ b/public/stylesheet/layout/grid.scss
@@ -1,5 +1,6 @@
 @import '../utils.scss';
 
+// postition inital 해제 dispalt block 
 article {
   position: relative;
   width: 100%;
@@ -104,7 +105,7 @@ article {
         -o-transition: all 1.5s;
         padding-top: 80px;
         text-align: center;
-        box-shadow: 10px 10px 5px 0px rgb(255, 232, 204);
+        box-shadow: 10px 10px 5px 0px rgba(255, 232, 204);
       }
 
       .red {
